tests/script_runtime_errors/error_after_heredoc/error.txt
Error: 
    6 | event.snot
      |       ^^^^ Conflicting types, got array but expected record
